--- a/VkDiskCore.csproj
+++ b/VkDiskCore.csproj
@@ -71,6 +71,7 @@
     <Compile Include="DataBase\Model\Document.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="Utility\VkNetCaptchaSolver.cs" />
     <Compile Include="Utility\ConnectionInfo.cs" />
     <Compile Include="Utility\FileSize.cs" />
     <Compile Include="Utility\ImageCache.cs" />
