--- a/VkDiskCore.csproj
+++ b/VkDiskCore.csproj
@@ -92,14 +92,20 @@
       <Version>4.3.4</Version>
     </PackageReference>
     <PackageReference Include="VkNet">
-      <Version>1.49.0</Version>
+      <Version>1.50.0</Version>
     </PackageReference>
     <PackageReference Include="VkNet.AudioBypassService">
       <Version>1.5.3</Version>
     </PackageReference>
+    <PackageReference Include="VkNet.NLog.Extensions.Logging">
+      <Version>1.3.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
