--- a/VkDiskCore.csproj
+++ b/VkDiskCore.csproj
@@ -70,6 +70,7 @@
     <Compile Include="DataBase\DbUser.cs" />
     <Compile Include="DataBase\Model\Document.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Utility\VkNetCaptchaSolver.cs" />
     <Compile Include="Utility\ConnectionInfo.cs" />
