image cache service

--- a/VkDiskCore.csproj
+++ b/VkDiskCore.csproj
@@ -71,6 +71,8 @@
     <Compile Include="DataBase\Model\Document.cs" />
     <Compile Include="Errors\FileUploadingException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Cache\Images\IImageCache.cs" />
+    <Compile Include="Services\Cache\Images\ImageCache.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Utility\VkNetCaptchaSolver.cs" />
